feat!: Upgrade code base to Java 21